--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,20 @@
     "display": "standalone", 
     "icons": [
         {
-            "src": "img/demo_yellow.png", 
+            "src": "img/MBSS_logo_white_curve_192x192.png", 
             "sizes": "192x192", 
             "type": "image/png"
         }, 
         {
-            "src": "img/demo_orange.png", 
+            "src": "img/MBSS_logo_white_curve_512x512.png", 
             "sizes": "512x512", 
             "type": "image/png"
+        },
+        {
+            "src": "img/MBSS_logo_white_curve_maskable.png", 
+            "sizes": "321x321", 
+            "type": "image/png"
+            "purpose": "maskable"
         }
     ]
 }
