--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,14 @@
         {
             "src": "img/MBSS_logo_white_curve_192x192.png", 
             "sizes": "192x192", 
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         }, 
         {
             "src": "img/MBSS_logo_white_curve_512x512.png", 
             "sizes": "512x512", 
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         },
         {
             "src": "img/MBSS_logo_white_curve_maskable.png", 
