--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,12 @@
         {
             "src": "img/MBSS_logo_white_curve_192x192.png", 
             "sizes": "192x192", 
-            "type": "image/png",
-            "purpose": "any"
+            "type": "image/png"
         }, 
         {
             "src": "img/MBSS_logo_white_curve_512x512.png", 
             "sizes": "512x512", 
-            "type": "image/png",
-            "purpose": "any"
+            "type": "image/png"
         },
         {
             "src": "img/MBSS_logo_white_curve_maskable.png", 
